@@ -18,9 +18,9 @@
 // 02111-1307, USA.
 // ========================================================================
 //
-// File          : $RCSfile$
-// Revision      : $Revision$
-// Revision date : $Date$
+// File          : $RCSfile: biff.cc,v $
+// Revision      : $Revision: 1.7 $
+// Revision date : $Date: 2004/12/03 17:13:39 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -276,6 +276,29 @@ Biff::remove (Mailbox *mailbox)
 		}
 	g_mutex_unlock (mutex_);
 }
+
+/**
+ * This function tries to guess a mailbox password by looking at other mailboxes.
+ * If one of them get same address and same username, then this is reasonable to
+ * think they may share the same password. This is typically the case when
+ * monitoring several folders on the same mail account.
+ *
+ *
+ * @param  m        the mailbox missing a password
+ * @return          the found password or an empty string if none found
+ */
+std::string
+Biff::password (Mailbox *m)
+{
+	for (guint i=0; i < size(); i++) {
+		if ((mailbox(i) != m)
+			&& (mailbox(i)->address() == m->address())
+			&& (mailbox(i)->username() == m->username()))
+			return mailbox(i)->password();
+	}
+	return "";
+}
+
 
 // ================================================================================
 //  i/o
