@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.cc,v $
-// Revision      : $Revision: 1.10 $
-// Revision date : $Date: 2004/12/03 17:13:39 $
+// Revision      : $Revision: 1.11 $
+// Revision date : $Date: 2004/12/04 18:49:05 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -118,6 +118,29 @@ Mailbox::Mailbox (const Mailbox &other)
 	seen_.clear();
 	mutex_ = g_mutex_new();
 	monitor_mutex_ = g_mutex_new();
+}
+
+Mailbox &
+Mailbox::operator= (const Mailbox &other)
+{
+	if (this == &other)
+		return *this;
+	biff_			= other.biff_;
+	name_			= other.name_;
+	protocol_		= other.protocol_;
+	authentication_ = other.authentication_;
+	address_		= other.address_;
+	username_		= other.username_;
+	password_		= other.password_;
+	port_			= other.port_;
+	folder_			= other.folder_;
+	certificate_	= other.certificate_;
+	delay_			= other.delay_;
+	use_other_folder_= other.use_other_folder_;
+	other_folder_	= other.other_folder_;
+	use_other_port_	= other.use_other_port_;
+	other_port_		= other.other_port_;
+	return *this;
 }
 
 Mailbox::~Mailbox (void)
