@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: ui-preferences.cc,v $
-// Revision      : $Revision: 1.6 $
-// Revision date : $Date: 2004/12/03 17:13:39 $
+// Revision      : $Revision: 1.7 $
+// Revision date : $Date: 2004/12/04 20:38:22 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -414,6 +414,9 @@ Preferences::on_add	(GtkWidget *widget)
 {
 	if (added_ == 0) {
 		added_ = new Mailbox(biff_);
+		if (selected_)
+			(*added_) = (*selected_);
+
 		biff_->add (added_);
 		synchronize ();
 		GtkTreeView  *view  = GTK_TREE_VIEW (get("mailboxes_treeview"));
@@ -547,9 +550,11 @@ Preferences::on_selection (GtkTreeSelection *selection)
 		properties_->select (mailbox);
 		selected_ = mailbox;
 		gtk_label_set_text (GTK_LABEL(get ("selection")), mailbox->name().c_str());
+		gtk_button_set_label (GTK_BUTTON(get("add")), "gtk-copy");
 	}
 	else {
 		gtk_label_set_text (GTK_LABEL(get ("selection")), _("No mailbox selected"));
+		gtk_button_set_label (GTK_BUTTON(get("add")), "gtk-add");
 		selected_ = 0;
 	}
 }
